--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -8,6 +8,40 @@
 
     width: 100vw;
 }
+.header-logo-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+  }
+
+.header-logo {
+    width: 100px;
+    height: auto;
+}
+.cover-image-section {
+    position: relative;
+    height: 100vh; 
+}
+.imagen{
+    
+    background-image: url(src/assets/beer-drink.jpg); 
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    margin-bottom: 20px;
+}
+
+#aboutUs {
+    background-color: aquamarine;
+    padding: 20px 0 20px; /* Ajusta el relleno según tus necesidades */
+    margin-top: calc(50vh - 70px);
+}
+.header-bg-image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
 .header-contenido{
     padding: 10px 10px 0 10px;
     display: flex;
