--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .contenedor{
+  display:flexbox;
   width: 95%;
   max-width: 120rem;
   margin: 0 auto;
@@ -9,6 +10,5 @@
 #coverImage,
 #testimonios,
 #contact{
-  height: 60vh;
+  height:auto
 }
-
