--- a/src/componentes/BeerFlex/BeerFlex.css
+++ b/src/componentes/BeerFlex/BeerFlex.css
@@ -1,10 +1,10 @@
 .beerFlex{
-    height: 60vh;
+    height: 57rem;
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
-    padding-bottom: 5rem;
+    /* padding-bottom: 5rem; */
 }   
 .productos-flex{
   display: flex;
@@ -18,58 +18,69 @@
 }
 
 .producto-titulo{
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 5rem;
-  margin-left: 3rem;
-  margin-bottom: 2rem;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 4rem;
+    margin-left: 3rem;
+    margin-bottom: 2rem;
 }
-
+ 
 .producto-titulo em{
-  font-size: 4rem;
-  font-weight: lighter;
-  color: #adb5bd;
-  margin-left: 10px;
-  opacity: 0; 
-  transition: opacity 0.3s ease;
+    font-size: 4rem;
+    font-weight: lighter;
+    color: #adb5bd;
+    margin-left: 1rem;
+    opacity: 0; 
+    transition: opacity 0.3s ease;
 }
-
+  
 .producto-titulo:hover em{
-  opacity: 1;
+opacity: 1;
 }
 
 .estilo-swiper{
     width: 75vw;
 }
+.swiper-wrapper{  
+  margin-left: -4rem;
+}
+.swiper-slide{
+  margin-left: .2rem;
+}
 
 .swiper-button-next,
 .swiper-button-prev {
-  position: absolute !important;
-  bottom: 0 !important;
-  right: 5% !important;
-  top: 135rem !important;
-  color: rgb(255, 0, 191);
- 
-}
-.swiper-button-prev {
-  left: 5% !important;
+  display: none !important;
 }
 
+@media screen and (min-width: 480px) and (max-height: 600px) {
+  .beerFlex{
+    height: 60rem;
+    /* background-color: red; */
+  }
 
-/* Tablet y Phones */
-@media (max-width: 768px) {
+}
 
-  .producto-titulo em{
-    font-size: 2.6rem;
-  }
-  .estilo-swiper {
-    width: 100vw; /* Ancho del 100% en dispositivos móviles */
-  }
-  .estilo-swiper .swiper-slide.custom-margin {
-    margin-left: 2rem;
-  }
+@media (min-width: 768px){
+
   .swiper-button-next,
   .swiper-button-prev {
-    display: none !important;
+    display: block !important;
+    position: absolute !important;
+    bottom: 0 !important;
+    right: 5% !important;
+    top: 190rem !important;
   }
 
-}
+  .swiper-button-prev {
+    left: 5% !important;
+  }
+  .estilo-swiper{
+    width: 65vw;
+  }
+  .swiper-wrapper{
+    margin-left: 1rem;
+  }
+  .swiper-slide{
+    margin-left: 2rem;
+  }
+} 
