--- a/src/componentes/CardBeer/CardBeer.css
+++ b/src/componentes/CardBeer/CardBeer.css
@@ -7,43 +7,12 @@ a{
     align-items: center;
     background-color: #f5f5f5;
     height: 36rem;
-    width: 30rem;
+    width: 25rem;
     border-radius: 2rem;
-    margin-left: 7rem;
-    margin-bottom: 2rem;
-    padding-top: 10px;
+    /* margin-left: 7rem; */
+    margin: 2rem 0rem 0rem 7rem;
+    padding-top: 1rem;
     box-shadow: .3rem .3rem .7rem gainsboro;
-}
-
-/* Estilos de PRODUCTOS */
-.productos-flex{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: aqua;
-}
-.productos-flex .producto{
-    margin-bottom: 2rem;
-}
-
-.producto-titulo{
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 5rem;
-    margin-left: 3rem;
-    margin-bottom: 2rem;
-}
- 
-.producto-titulo em{
-    font-size: 4rem;
-    font-weight: lighter;
-    color: #adb5bd;
-    margin-left: 1rem;
-    opacity: 0; 
-    transition: opacity 0.3s ease;
-}
-  
-.producto-titulo:hover em{
-opacity: 1;
 }
 
 .producto_info{
@@ -84,24 +53,27 @@ opacity: 1;
 
 .producto_nombre,
 .producto_precio{
-    margin: 10px;
+    margin: 1rem;
     text-align: center;
     line-height: 1.2;
 }
 
-@media screen and (min-width: 768px) {
-    .producto{
-        height: 42rem;
-        margin-left: 10rem;
-        margin-bottom: 2rem;
-    }
-    .producto_imagen{
-        height: 55%;
-        width: 23rem;
-    }
-    .producto_nombre{
-        font-size: 3.5rem;
-    }
+.estilo-swiper {
+    height: 45rem;
+}
 
+@media screen and (min-width: 480px) and (max-height: 600px){
+    .producto{
+        height: 38rem;
+        background-color: #aab6c9;
+    }
 } 
+
+@media (min-width: 768px){
+    .producto{
+        width: 28rem;
+    }
+}
+
+
 
