--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -4,8 +4,7 @@
     background-color: black;
     color: white;
     text-align: center;
-    padding: 20px;
-
+    padding: .5rem;
     width: 100vw;
 }
 .header-logo-container {
@@ -16,19 +15,17 @@
 
 .header-logo {
     width: 100px;
-    height: auto;
+    height: 10em;
 }
 .cover-image-section {
     position: relative;
     height: 100vh; 
 }
 .imagen{
-    
-    background-image: url(src/assets/beer-drink.jpg); 
+    background-image: url('src/assets/beer-drink.jpg'); 
     object-fit: cover;
     width: 100%;
     height: 100vh;
-    margin-bottom: 20px;
 }
 
 #aboutUs {
