--- a/src/App.css
+++ b/src/App.css
@@ -8,25 +8,132 @@
   height: auto;
 }
 
-#coverImage{
-  height: 58.2vh;
-}
 
-#aboutUs,
+#aboutUs{
+  height: 85vh;
+  background-color: rgba(200, 199, 199, 0.128);
+
+}
 #contact{
   height: 60vh;
 }
 
 .producto-container{
-  height: 90vh;
-  /* background-color: lightcyan; */
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+/* AboutUS */
+.aboutUs-titulo{
+  font-size: 3rem;
+  font-family: 'Bebas Neue', sans-serif;
+  position: absolute;
+  margin: 5rem 0rem 0rem 7rem;
+}
+
+.aboutUs-contenedor{
+  height: 85vh;
+  width: 100vw;
+  display: grid;
+}
+.aboutUs-image{
+  height: 40rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.aboutUs-image img{
+  height: 30rem;
+  margin-top: 12rem;
+  filter: drop-shadow(.5rem .5rem 1.2rem black);
+}
+
+.aboutUs-imagen{
+  position: absolute;
+  height: 40rem;
+  width: 100%;
+  background-image: url('./assets/draft-beer-979210_640.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 25%;
+}
+
+.text{
+  position: relative;
+  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.text p{
+  width: 94%;
+  margin: 0;
+  padding: 0;
+  font-style: italic;
+  border-left: .4rem solid #ffcc00;
+  background-color: #f9f9f99d;
+  padding-left: 1rem;
+  color: #333;
+  margin-bottom: 1.5rem;
+  font-size: 1.6rem;
+}
+
+
 @media screen and (min-width: 480px) and (max-height: 600px){
   .producto-container{
       height: 65rem;
-      background-color: blueviolet;
   }
 }
+
+@media (min-width: 768px){
+  .aboutUs-contenedor{
+    /* position: relative; */
+    grid-template-columns: repeat(2, 1fr);
+    font-size: 2rem;
+  }
+
+  .aboutUs-image img{
+    height: 63rem;
+    margin-top: 8rem;
+  }
+  .aboutUs-image{
+    height: 80rem;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .aboutUs-text{
+    position: relative;
+  }
+  .aboutUs-imagen{
+    height: 80rem;
+  }
+  .text{
+    position: relative;
+    height: 80rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .text p{
+    width: 70%;
+    font-size: 2rem;
+    z-index: 2;
+    color: #555;
+  }
+
+  .aboutUs-overlay{
+    position: absolute;
+    background-color: rgba(198, 194, 194, 0.453);
+    height:  80rem;
+    width: 100%;
+    z-index: 1;
+  }
+
+} 
