Añade estilos y funcionalidades para la sección 'Nosotros' y agrega imagen a estilo-swiper de la seción  productos

--- a/src/componentes/BeerFlex/BeerFlex.css
+++ b/src/componentes/BeerFlex/BeerFlex.css
@@ -38,6 +38,10 @@ opacity: 1;
 
 .estilo-swiper{
     width: 75vw;
+    background-color: rgba(9, 12, 16, 0.11);
+    background-image: url('../../assets/ice-cubes-3506781_640.jpg');
+    background-size: cover;
+
 }
 .swiper-wrapper{  
   margin-left: -4rem;
@@ -59,27 +63,3 @@ opacity: 1;
 
 }
 
-@media (min-width: 768px){
-
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: block !important;
-    position: absolute !important;
-    bottom: 0 !important;
-    right: 5% !important;
-    top: 223rem !important;
-  }
-
-  .swiper-button-prev {
-    left: 5% !important;
-  }
-  .estilo-swiper{
-    width: 65vw;
-  }
-  .swiper-wrapper{
-    margin-left: 1rem;
-  }
-  .swiper-slide{
-    margin-left: 2rem;
-  }
-} 
