--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 }
 
 .producto-container{
+  margin-top: 10rem;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -26,114 +27,120 @@
 }
 
 /* AboutUS */
-.aboutUs-titulo{
-  font-size: 3rem;
+.aboutUs-titulo {
+  font-size: 2.5rem;
   font-family: 'Bebas Neue', sans-serif;
   position: absolute;
-  margin: 5rem 0rem 0rem 7rem;
+  margin: 4rem 0 0 6rem;
 }
 
-.aboutUs-contenedor{
-  height: 85vh;
+.aboutUs-contenedor {
+  height: 75vh;
   width: 100vw;
   display: grid;
 }
-.aboutUs-image{
-  height: 40rem;
+
+.aboutUs-image {
+  height: 35rem;
   display: flex;
   justify-content: center;
   width: 100%;
 }
-.aboutUs-image img{
-  height: 30rem;
-  margin-top: 12rem;
-  filter: drop-shadow(.5rem .5rem 1.2rem black);
+
+.aboutUs-image img {
+  height: 25rem;
+  margin-top: 10rem;
+  filter: drop-shadow(0.5rem 0.5rem 1.2rem black);
 }
 
-.aboutUs-imagen{
+.about-text{
+  height: 35rem;
+}
+
+.aboutUs-imagen {
   position: absolute;
-  height: 40rem;
-  width: 100%;
+  height: 35rem;
+  min-height: 40rem;
+  width: 95vw;
   background-image: url('./assets/draft-beer-979210_640.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 25%;
+  top: 4.5rem;
 }
 
-.text{
+.text {
   position: relative;
-  height: 40rem;
+  height: 44rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.text p{
-  width: 94%;
+.text p {
+  width: 80%;
   margin: 0;
   padding: 0;
   font-style: italic;
-  border-left: .4rem solid #ffcc00;
+  border-left: 0.4rem solid #ffcc00;
   background-color: #f9f9f99d;
   padding-left: 1rem;
   color: #333;
   margin-bottom: 1.5rem;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
 
-
-@media screen and (min-width: 480px) and (max-height: 600px){
-  .producto-container{
-      height: 65rem;
+ 
+@media screen and (min-width: 480px) and (max-height: 600px) {
+  .aboutUs-contenedor {
+    height: 65rem;
+  }
+  .producto-container {
+    margin-top: calc(0rem - 10rem);
   }
 }
 
-@media (min-width: 768px){
-  .aboutUs-contenedor{
-    /* position: relative; */
+@media (min-width: 992px) {
+
+  .aboutUs-contenedor {
     grid-template-columns: repeat(2, 1fr);
-    font-size: 2rem;
+    font-size: 2.2rem;
   }
 
-  .aboutUs-image img{
-    height: 63rem;
+  .aboutUs-image img {
+    height: 50rem;
     margin-top: 8rem;
   }
-  .aboutUs-image{
-    height: 80rem;
-    display: flex;
-    justify-content: center;
-    width: 100%;
+
+  .aboutUs-image {
+    height: 60rem;
   }
-  .aboutUs-text{
-    position: relative;
+
+  .about-text{
+    height: 70rem;
+  }
+  .text {
+    height: 50rem;
+    flex-wrap: wrap;
+  }
+
+  .text p {
+    width: 70%;
+    font-size: 2.2rem;
   }
   .aboutUs-imagen{
-    height: 80rem;
-  }
-  .text{
-    position: relative;
-    height: 80rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 96%;
   }
 
-  .text p{
-    width: 70%;
-    font-size: 2rem;
-    z-index: 2;
-    color: #555;
+  .aboutUs-imagen,
+  .aboutUs-overlay {
+    top: .1rem;
+    height: 85vh;
   }
+}
 
-  .aboutUs-overlay{
-    position: absolute;
-    background-color: rgba(198, 194, 194, 0.453);
-    height:  80rem;
-    width: 100%;
-    z-index: 1;
-  }
+@media (min-width: 1200px){
+
 
 } 
